src/objects/ConsumerSeachResults__c.object
<CustomObject>
    <description>Used to store results from ConsumerdB so they can be displayed and sorted using Lightning dtaaTable.  After CreateCase is called- need to delete these records.</description>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsClientDivIDs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ConsClientDivIDs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ConsumerId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Client_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Client Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COnsumer Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <formula>CASESAFEID(CreatedById)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullClientId__c</fullName>
        <formula>ConsumerId__c +&apos; &apos;+  Client_Id__c +&apos; &apos;+ divId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FullClientId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryMemberConsumerId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PrimaryMemberConsumerId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryMemberName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PrimaryMemberName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation_to_Member__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relation to Member</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TermDate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coverageCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>coverageCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>divId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>divId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dobDisplay__c</fullName>
        <formula>If(ISBLANK(dob__c),&apos;&apos;,  MID(dob__c, 5 , 2)+&apos;/&apos;+RIGHT(dob__c,2)+ &apos;/&apos;+LEFT(dob__c, 4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dobDisplay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dobForSort__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>dobForSort</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dob__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>dob</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dob_display__c</fullName>
        <formula>if(isblank(dob__c),&apos;&apos;,mid(dob__c,5,2) +&apos;/&apos;+	right(dob__c,2)+&apos;/&apos;+left(dob__c,4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dob_display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effectiveDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>effectiveDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effectiveInDateFormat__c</fullName>
        <description>effective date = yyy-mm-DD</description>
        <formula>DATE(value(LEFT(effectiveDate__c ,4)),VALUE(MID(effectiveDate__c, 5,2)),VALUE(RIGHT(effectiveDate__c,2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>effectiveInDateFormat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expandedId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>expandedId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>firstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>lastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>populationIndicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>populationIndicator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strategicAlliance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>strategicAlliance</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ConsumerSeachResults</label>
    <nameField>
        <displayFormat>CS-{000}</displayFormat>
        <label>ConsumerSeachResults Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ConsumerSeachResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>